2003-10-29  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opannotate.1.in:
	* doc/opreport.1.in:
	* doc/oprofile.xml:
	* libregex/demangle_symbol.cpp:
	* libregex/demangle_symbol.h:
	* pp/common_option.cpp:
	* pp/common_option.h:
	* pp/opannotate_options.cpp:
	* pp/opannotate_options.h:
	* pp/opreport_options.cpp:
	* pp/opreport_options.h: remove --no-demangle, --smart-demangle and
	  --demangle, replace them with --demangle=none|smart|normal

2003-10-29  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/tests: new directory
	* libutil++/tests/string_manip_tests.cpp: new tests file
	* configure.in:
	* libutil++/Makefile.am:
	* libutil++/tests/.cvsignore:
	* libutil++/tests/Makefile.am: handle new test

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: correct implementation of separate_token
	  to match the documentation
	* daemon/liblegacy/opd_image.c: fix comment

2003-10-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/count_array.cpp:
	* libpp/count_array.h:
	* libpp/locate_images.h:
	* libpp/parse_filename.cpp:
	* libpp/profile.cpp:
	* libpp/profile.h:
	* libpp/profile_spec.cpp:
	* libpp/symbol_sort.cpp: minor tidy

2003-10-28  Jason Lunz  <lunz@falooley.org>

	* doc/opcontrol.1.in: better wording for --separate=
	* doc/oprofile.1.in: typo

2003-10-28  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/liblegacy/init.c:
	* daemon/liblegacy/opd_24_stats.c:
	* daemon/liblegacy/opd_24_stats.h:
	* daemon/liblegacy/opd_image.c:
	* daemon/liblegacy/opd_image.h:
	* daemon/liblegacy/opd_kernel.c:
	* daemon/liblegacy/opd_kernel.h:
	* daemon/liblegacy/opd_mapping.c:
	* daemon/liblegacy/opd_mapping.h:
	* daemon/liblegacy/opd_parse_proc.c:
	* daemon/liblegacy/opd_parse_proc.h:
	* daemon/liblegacy/opd_proc.c:
	* daemon/liblegacy/opd_proc.h:
	* daemon/liblegacy/opd_sample_files.c:
	* daemon/liblegacy/opd_sample_files.h: move doygen comment from *.c to
	  *.h. Add some doxygen comment.

2003-10-27  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/liblegacy/opd_24_stats.c: