@@ -9,12 +9,6 @@ for some pointers and/or read HACKING and doc/CodingStyle.
  o image filtering needs to resolve symlinks
  o opgprof/opannotate always merges even if we provide a profile spec that's
    minimal enough - you can't get "cpu:0"
- o pp_interface: 3.4 multiple tag:value are documented as overwriting previous
-  value but this is false, actually the implementation is even not coherent
-  tag:value overwrite, tags accepting comma separated list are cumulative
-  if there are implemented through separate_token() but not if they are
-  implemented through comma_list.h ... 1st fix pp_interface (I'm for always
-  overwrite now)
  o libutil++/string_manip.cpp: lexical_cast_ws<> is silly, we should trust
   sample filename format, tobool() tostr() and possibly touint() are redudant
   too.
@@ -104,7 +98,8 @@ vma      samples  cum. samples  %           cum. %     symbol name             i
 
   Note the ellipsis
  o should we make the sighup handler re-read counter config and re-start profiling too ?
- o implement pp_interface alias (is it worth it ?)
+ o implement pp_interface alias (is it worth it ?). After choosing that we
+  can probably simplify comma_list<>, and separate_token().
  o improve --smart-demangle
 	o allow user to add it's own pattern in user.pat, document it.
 	o hard code ${typename} regular definition to remove all current limitations (difficult, perhaps after 1.0 ?).
